--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,8 @@
+name = "TranscriptionNeuralODEs"
+uuid = "4d9324a2-c7b2-4d7b-b573-0191e026223e"
+authors = ["Ilya Orson Sandoval <ilya.orson@gmail.com>"]
+version = "0.1.0"
+
 [deps]
 ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
@@ -20,6 +25,7 @@ PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
