--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
+GarishPrint = "b0ab02a7-8576-43f7-aa76-eaa7c3897c54"
 InfiniteOpt = "20393b10-9daf-11e9-18c9-8db751c92c57"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JSServe = "824d6782-a2ef-11e9-3a09-e5662e0c26f9"
